fix(performance): fix scroll performance on mobile-devices

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,3 +1,4 @@
+/* TODO: change this file to use styled-system global styles */
 body,
 html {
   margin: 0;
@@ -5,6 +6,13 @@ html {
   height: 100vh;
   width: 100vw;
   position: relative;
+}
+
+@media (max-width: 36rem) {
+  body,
+  html {
+    height: auto;
+  }
 }
 
 * {
